# APSS

./: .gitignore  .gitmodules  APSS.qmlproject  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.shared  LICENSE  README.md  config.yml  exports.h.in  qds.cmake  qtquickcontrols2.conf  vcpkg-configuration.json  vcpkg.json
APSS/: CMakeLists.txt  Constants.qml  DetailedEvent.qml  ReviewPage.qml  VideoPlaybackPage.qml  qmldir
APSS/components/: CMakeLists.txt  CameraDialog.qml  LivePlaybackCard.qml  MetricsPane.qml  TabBar.qml  TabButton.qml  qmldir
APSS/components/designer/: plugin
APSS/designer/: plugin.metainfo
APSSContent/: App.qml  CMakeLists.txt  HomePage.qml  MainScreen.ui.qml  ReviewPage.qml  VideoPlaybackPage.qml
App/: CMakeLists.txt  apss.h  main.cpp  tbb_patched.h
App/autogen/: environment.h
App/camera/: CMakeLists.txt  cameracapture.cpp  cameracapture.h  camerametrics.cpp  camerametrics.h  cameraprocessor.cpp  cameraprocessor.h  camerawatchdog.cpp  camerawatchdog.h  ffmpegcamera.cpp  ffmpegcamera.h  ffmpegfile.cpp  ffmpegfile.h  filestream.cpp  filestream.h
App/config/: CMakeLists.txt  apssconfig.h  cameraconfig.h  cameraffmpeg.h  databaseconfig.h  detectconfig.h  detectorconfig.h  licenseplateconfig.h  modelconfig.h  objectconfig.h  paddleocrconfig.h  pch.h  platerecognizerconfig.h  predictorconfig.h  recordconfig.h
App/db/: CMakeLists.txt  camera.h  db.h  event  event-odb.cxx  event-odb.hxx  event-odb.ixx  event-schema.cxx  event.h  event.xml  exports  exports.h  frameprediction-odb.cxx  frameprediction-odb.hxx  frameprediction-odb.ixx  frameprediction-schema.cxx  frameprediction.h  frameprediction.xml  pch.h  prediction-odb.cxx  prediction-odb.hxx  prediction-odb.ixx  prediction-schema.cxx  prediction.h  prediction.xml  readme.md  recording  recording-odb.cxx  recording-odb.hxx  recording-odb.ixx  recording-schema.cxx  recording.h  recording.xml  region  timeline  timeline.h
App/db/models/: event.cpp  event.h  export.cpp  export.h  orm_export.h  orm_precompiled.h  recordings.cpp  recordings.h  regions.cpp  regions.h  timeline.cpp  timeline.h
App/db/odbmodels/: event  event.h  exports  exports.h  prediction.h  recording  recording.h  region  region.h  timeline  timeline.h
App/db/sqlite/: camera-odb.cxx  camera-odb.hxx  camera-odb.ixx  camera-schema.cxx  event-odb.cxx  event-odb.hxx  event-schema.cxx  exports-odb.cxx  exports-odb.hxx  exports-odb.ixx  exports-schema.cxx  recording-odb.cxx  recording-schema.cxx  region-odb.cxx  region-odb.hxx  region-odb.ixx  region-schema.cxx  timeline-odb.cxx  timeline-odb.hxx  timeline-schema.cxx
App/detectors/: CMakeLists.txt  image.cpp  image.h  lpdetectorsession.cpp  lpdetectorsession.h  lprsession.cpp  lprsession.h  objectdetector.cpp  objectdetector.h  objectdetectorsession.cpp  objectdetectorsession.h  onnxinference.cpp  onnxinference.h  paddlecls.cpp  paddlecls.h  paddledet.cpp  paddledet.h  paddleocr.cpp  paddleocr.h  paddlerec.cpp  paddlerec.h  poseestimator.cpp  poseestimator.h  prediction.h  predictor.cpp  predictor.h  utils.h  yolodetection.cpp  yolodetection.h  yoloinference.cpp  yoloinference.h  yolopose.cpp  yolopose.h  yolosegmentation.cpp  yolosegmentation.h
App/detectors/accelarators/: accelaratorapi.h
App/detectors/licensed/: clipper.cpp  ocr_cls.cpp  ocr_cls.h  ocr_det.cpp  ocr_det.h  ocr_rec.cpp  ocr_rec.h  postprocess_op.cpp  postprocess_op.h  preprocess_op.cpp  preprocess_op.h  utility.cpp  utility.h
App/detectors/wrappers/: customallocator.h
App/engine/: apssengine.cpp  apssengine.h  boundedinformer.h  lpdetectorsession.cpp  lpdetectorsession.h  lprsession.cpp  lprsession.h  objectdetectorsession.cpp  objectdetectorsession.h  trackedobjectprocessor.cpp  trackedobjectprocessor.h
App/events/: CMakeLists.txt  detectionsubpub.h  publisher.h  subscriber.h  zmqproxy.h
App/models/: CMakeLists.txt  camerametricsmodel.cpp  camerametricsmodel.h  eventsmodel.cpp  eventsmodel.h
App/output/: CMakeLists.txt  packetringbuffer.cpp  packetringbuffer.h  perobjectremuxer.cpp  perobjectremuxer.h  recordingsmanager.cpp  recordingsmanager.h  trackedobjectprocessor.cpp  trackedobjectprocessor.h  videorecorder.cpp  videorecorder.h
App/track/: CMakeLists.txt  tracker.cpp  tracker.h
App/utils/: CMakeLists.txt  circularqueue.h  eventspersecond.h  frame.cpp  frame.h  framemanager.cpp  framemanager.h  prediction.h  rfl_opencv.hpp  sharedqueue.h  sharedqueuewc.h  timeboundedqueue.h
Dependencies/: CMakeLists.txt
cmake/: FindOnnxRuntime.cmake  Findodb.cmake  dependencies.cmake  helpers.cmake
custom-ports/libodb/: portfile.cmake  vcpkg.json
custom-ports/libodb-qt/: portfile.cmake  vcpkg.json
custom-ports/libodb-sqlite/: portfile.cmake  vcpkg.json
custom-ports/sqlite3/: portfile.cmake  vcpkg.json
ext/: CMakeLists.txt
scripts/: quick_change_index.py  quick_convert.py  quick_dataset_check.py  quick_extract_lp.py  quick_extract_lp_dataset.py  quick_metrics.py  quick_model_assist_label.py  quick_onnx_metadata.py  quick_plate_recognizer.py  quick_plot.py  quick_poly2bb.py  quick_poly2obb.py  quick_poly2pose.py  quick_split.py  requirements.txt  setup_models.py
test/: CMakeLists.txt  tst_config.cpp  tst_db.cpp  tst_db_event.cpp  tst_db_exports.cpp  tst_db_recording.cpp  tst_db_region.cpp  tst_db_timeline.cpp  tst_predictors.cpp  tst_predictors_paddleocr.cpp  tst_samples.cpp  tst_timeboundedqueue.cpp  tst_utils_framestore.cpp
